--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>FOTOLOG - ..::ÁrÉnItÁ .´´´ ÁmíGáS x CrÉw::..</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -55,8 +57,13 @@
 						<input type="text" id="clave">
 						<h3>Comentario</h3>
 						<textarea id="valor"></textarea>
+						<button type="button" id="save" class=" btn btn-default" value="Guardar Datos">Guardar</button>
+						<button type="button" id="clean" class=" btn btn-default" value="Guardar Datos">Limpiar Comentarios</button>
 					</form>
 				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-12" id="data"></div>
 			</div>
 		</div>
 	</section>
